# market-data-warehouse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.codex/: project-memory.md
clients/: __init__.py  bronze_client.py  db_client.py  historical_provider.py  ib_client.py  intraday_bronze_client.py  parquet_io.py
docker/ib-gateway/: .env.example  README.md  docker-compose.yml
docs/: backtesting.md  ib_tws_api.md  observability_defensive_blueprint.md
macos/: Package.swift  README.md
presets/: adrs.json  core-etfs.json  etfs.json  volatility.json
scripts/: backfill_intraday.py  com.market-warehouse.daily-update.plist.example  coverage_report.py  daily_update.py  fetch_cboe_volatility.py  fetch_ib_historical.py  health_check.py  intraday_update.py  migrate_parquet_filename.py  pre-commit-secrets-scan.sh  probe_ib_intraday.py  rebuild_duckdb_from_parquet.py  run_daily_update.sh  setup_market_warehouse.sh  sync_to_r2.py  universe_screener.py  weekly_quality_summary.py
tasks/: lessons.md  todo.md
tests/: test_backfill_intraday.py  test_bronze_client.py  test_coverage_report.py  test_daily_update.py  test_db_client.py  test_fetch_cboe_volatility.py  test_fetch_ib_historical.py  test_health_check.py  test_historical_provider.py  test_ib_client.py  test_intraday_bronze_client.py  test_intraday_update.py  test_migrate_parquet_filename.py  test_parquet_io.py  test_rebuild_duckdb_from_parquet.py  test_storage_client_compat.py  test_sync_to_r2.py  test_universe_screener.py  test_weekly_quality_summary.py
(+61 files in other folders)
